Nicer looking export dialog with manual refresh button

--- a/gui/resources.qrc
+++ b/gui/resources.qrc
@@ -5,5 +5,7 @@
     <file>icons/download.png</file>
     <file>icons/refresh.png</file>
     <file>icons/export.png</file>
+    <file>icons/cancel.png</file>
+    <file>icons/ok.png</file>
   </qresource>
 </RCC>
