Support zoom levels in job dialog

--- a/gui/jobdialog.ui
+++ b/gui/jobdialog.ui
@@ -42,27 +42,7 @@
       <string>Job options</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="email"/>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>E-mail address</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0" colspan="2">
-       <widget class="QWidget" name="widget" native="true">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>1</verstretch>
-         </sizepolicy>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0" colspan="2">
+      <item row="3" column="0" colspan="2">
        <widget class="QCheckBox" name="dedicated">
         <property name="layoutDirection">
          <enum>Qt::LeftToRight</enum>
@@ -71,6 +51,54 @@
          <string>Download dedicated file</string>
         </property>
        </widget>
+      </item>
+      <item row="2" column="0" colspan="2">
+       <widget class="QSlider" name="zoomslider">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0" colspan="2">
+       <widget class="QWidget" name="widget" native="true">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>1</verstretch>
+         </sizepolicy>
+        </property>
+        <layout class="QGridLayout" name="gridLayout_3">
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+        </layout>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="emaillabel">
+        <property name="text">
+         <string>E-mail address</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="zoomlabel">
+        <property name="text">
+         <string>Zoom level</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="email"/>
       </item>
      </layout>
     </widget>
@@ -1010,7 +1038,6 @@
  <tabstops>
   <tabstop>projectlist</tabstop>
   <tabstop>email</tabstop>
-  <tabstop>dedicated</tabstop>
   <tabstop>cancelbtn</tabstop>
   <tabstop>okbtn</tabstop>
  </tabstops>
