--- a/gui/interface.ui
+++ b/gui/interface.ui
@@ -1414,6 +1414,9 @@
                    <normalon>:/icons/refresh.png</normalon>
                   </iconset>
                  </property>
+                 <property name="shortcut">
+                  <string>F5</string>
+                 </property>
                 </widget>
                </item>
               </layout>
