--- a/gui/exporter.ui
+++ b/gui/exporter.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>793</width>
-    <height>373</height>
+    <height>418</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -75,7 +75,7 @@
              </property>
             </widget>
            </item>
-           <item row="8" column="1" colspan="2">
+           <item row="10" column="1" colspan="2">
             <widget class="QCheckBox" name="zero_sea_level">
              <property name="text">
               <string>Zero at sea level</string>
@@ -92,7 +92,7 @@
              </property>
             </widget>
            </item>
-           <item row="10" column="0" colspan="3">
+           <item row="13" column="0" colspan="3">
             <widget class="QWidget" name="widget_3" native="true">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -1476,7 +1476,7 @@
              </property>
             </widget>
            </item>
-           <item row="9" column="1">
+           <item row="12" column="1">
             <widget class="QCheckBox" name="textures">
              <property name="text">
               <string>Include texture coordinates</string>
@@ -1506,6 +1506,29 @@
            </item>
            <item row="2" column="1" colspan="2">
             <widget class="QComboBox" name="formats"/>
+           </item>
+           <item row="0" column="1" colspan="2">
+            <widget class="QComboBox" name="projects"/>
+           </item>
+           <item row="8" column="1" colspan="2">
+            <widget class="QLabel" name="colormap_preview">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_5">
+             <property name="text">
+              <string>Project:</string>
+             </property>
+            </widget>
            </item>
            <item row="5" column="1" colspan="2">
             <widget class="QDoubleSpinBox" name="resolution">
@@ -1661,13 +1684,10 @@
              </layout>
             </widget>
            </item>
-           <item row="0" column="1" colspan="2">
-            <widget class="QComboBox" name="projects"/>
-           </item>
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_5">
+           <item row="9" column="1">
+            <widget class="QCheckBox" name="invertmap">
              <property name="text">
-              <string>Project:</string>
+              <string>Invert color map</string>
              </property>
             </widget>
            </item>
