--- a/gui/exporter.ui
+++ b/gui/exporter.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>793</width>
-    <height>458</height>
+    <height>461</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -68,7 +68,7 @@
              </property>
             </widget>
            </item>
-           <item row="7" column="1" colspan="2">
+           <item row="8" column="1" colspan="2">
             <widget class="QComboBox" name="colormaps"/>
            </item>
            <item row="2" column="0">
@@ -78,24 +78,24 @@
              </property>
             </widget>
            </item>
-           <item row="10" column="1" colspan="2">
+           <item row="11" column="1" colspan="2">
             <widget class="QCheckBox" name="zero_sea_level">
              <property name="text">
               <string>Zero at sea level</string>
              </property>
             </widget>
            </item>
-           <item row="3" column="1" colspan="2">
+           <item row="4" column="1" colspan="2">
             <widget class="QComboBox" name="coordinates"/>
            </item>
-           <item row="3" column="0">
+           <item row="4" column="0">
             <widget class="QLabel" name="label_3">
              <property name="text">
               <string>Coordinates:</string>
              </property>
             </widget>
            </item>
-           <item row="14" column="0" colspan="3">
+           <item row="15" column="0" colspan="3">
             <widget class="QWidget" name="widget_3" native="true">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -1479,14 +1479,14 @@
              </property>
             </widget>
            </item>
-           <item row="12" column="1">
+           <item row="13" column="1">
             <widget class="QCheckBox" name="textures">
              <property name="text">
               <string>Include texture coordinates</string>
              </property>
             </widget>
            </item>
-           <item row="5" column="0">
+           <item row="6" column="0">
             <widget class="QLabel" name="label_2">
              <property name="text">
               <string>Resolution:</string>
@@ -1500,7 +1500,7 @@
              </property>
             </widget>
            </item>
-           <item row="7" column="0">
+           <item row="8" column="0">
             <widget class="QLabel" name="label_4">
              <property name="text">
               <string>Color map:</string>
@@ -1513,7 +1513,7 @@
            <item row="0" column="1" colspan="2">
             <widget class="QComboBox" name="projects"/>
            </item>
-           <item row="8" column="1" colspan="2">
+           <item row="9" column="1" colspan="2">
             <widget class="QLabel" name="colormap_preview">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -1526,6 +1526,16 @@
              </property>
             </widget>
            </item>
+           <item row="14" column="0" colspan="3">
+            <widget class="QWidget" name="widget_8" native="true">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+               <horstretch>0</horstretch>
+               <verstretch>1</verstretch>
+              </sizepolicy>
+             </property>
+            </widget>
+           </item>
            <item row="0" column="0">
             <widget class="QLabel" name="label_5">
              <property name="text">
@@ -1533,7 +1543,7 @@
              </property>
             </widget>
            </item>
-           <item row="5" column="1" colspan="2">
+           <item row="6" column="1" colspan="2">
             <widget class="QDoubleSpinBox" name="resolution">
              <property name="suffix">
               <string>m</string>
@@ -1549,7 +1559,7 @@
              </property>
             </widget>
            </item>
-           <item row="6" column="1" colspan="2">
+           <item row="7" column="1" colspan="2">
             <widget class="QWidget" name="widget_4" native="true">
              <property name="minimumSize">
               <size>
@@ -1687,20 +1697,17 @@
              </layout>
             </widget>
            </item>
-           <item row="9" column="1">
+           <item row="10" column="1">
             <widget class="QCheckBox" name="invertmap">
              <property name="text">
               <string>Invert color map</string>
              </property>
             </widget>
            </item>
-           <item row="13" column="0" colspan="3">
-            <widget class="QWidget" name="widget_8" native="true">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-               <horstretch>0</horstretch>
-               <verstretch>1</verstretch>
-              </sizepolicy>
+           <item row="3" column="1" colspan="2">
+            <widget class="QCheckBox" name="structured">
+             <property name="text">
+              <string>Structured mesh</string>
              </property>
             </widget>
            </item>
